# libminizinc

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .mzn2fzn.cpp.swp  .readthedocs.yaml  BUILD.bat  BUILD.sh  CHANGES.txt  CITATION.cff  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.txt  LICENSE.txt  Makefile  Makefile.cpopt  README  README.md  README.txt  README_MIP.txt  README_bin.txt  beta.cpp  buildspec.yml  builtins.mzn  changes.rst  default.nix  download_vendor  flake.nix  lexer.yy.cpp  libminizincConfig.cmake.in  md5_gen.cmake  minizinc.cpp  mzn2c++.cpp  mzn2doc  mzn2doc.cpp  mzn2fzn.cpp  mzn2fzn_test.cpp  parser.tab.cpp  solns2out.cpp  (+2 more)
.gitlab/merge_request_templates/: Default.md
chi/: basic_steps.rst  conf.py  cpprofiler.rst  efficient.rst  find_mus.rst  flattening.rst  fzn-grammar.mzn  globalizer.rst  grammar.mzn  intro.rst  minizinc_ide.rst  modelling.rst  modelling2.rst  mzn_search.rst  optiontypes.rst  part_1_overview.rst  part_2_tutorial.rst  part_3_user_manual.rst  predicates.rst  sat.rst
chi/_static/: style.css
chi/examples/: allinterval.mzn  allinterval2.mzn  allinterval3.mzn  aust.mzn  binarysum.mzn  cakes.mzn  cakes2.mzn  cars.mzn  cnonoverlap.fzn  cnonoverlap.mzn  cumulative.mzn  flexible-js.mzn  jdata.dzn  jobshop.fzn  jobshop2.mzn  laplace.mzn  latin.mzn  latinbool.mzn  lightup.mzn  loan.mzn  meal.dzn  meal.mzn  nqueens.mzn  nqueens_sym.mzn  nurse.mzn  oesort.mzn  reflection.mzn  simple-prod-planning-data.dzn  simple-prod-planning.mzn  sudoku.mzn  wedding.mzn  wedding2.mzn
chi/figures/: queens_symm.graffle
cmake/modules/: FindCPLEX.cmake  FindCPlex.cmake  FindGeas.cmake  FindGecode.cmake  FindGurobi.cmake  FindMPFR.cmake  FindOsiCBC.cmake  FindSCIP.cmake  FindScip.cmake  FindXpress.cmake
cmake/scripts/: gen_header.py  md5_gen.cmake
cmake/support/: ccache_setup.cmake  compiler_setup.cmake  config_emscripten.cmake  config_export.cmake  config_output.cmake  emscripten_file_packager_patch.js  emscripten_setup.cmake  format.cmake
cmake/targets/: libminizinc.cmake  libminizinc_atlantis.cmake  libminizinc_chuffed.cmake  libminizinc_core.cmake  libminizinc_cplex.cmake  libminizinc_fzn.cmake  libminizinc_geas.cmake  libminizinc_gecode.cmake  libminizinc_gurobi.cmake  libminizinc_highs.cmake  libminizinc_mip.cmake  libminizinc_nl.cmake  libminizinc_osicbc.cmake  libminizinc_parser.cmake  libminizinc_scip.cmake  libminizinc_solver.cmake  libminizinc_xpress.cmake  libmzn.cmake  minizinc.cmake  mzn2doc.cmake
cmake/templates/: libminizincConfig.cmake.in  libminizincConfigVersion.cmake.in
doc/html/: footer.html  footer_jekyll.html  header.html  header_jekyll.html  style.css
doc/spec/: common-spec.tex  minizinc-spec.tex  version.tex.in
doc/tex/: minisearch-doc.tex  minisearch-syntax.tex
docs/: .gitlab-ci.yml  Makefile  README.md  all.mzn  conf.py  requirements.txt
docs/_static/: style.css
docs/_templates/: layout.html  redirect.html
docs/chi/: api_interfacing.rst  command_line.rst  conf.py  cpprofiler.rst  efficient.rst  flattening.rst  fzn-grammar.mzn  fzn-spec.rst  installation.rst  jupyter.rst  minizinc_ide.rst  modelling.rst  modelling2.rst  mzn_search.rst  optiontypes.rst  output.mzn  part_2_tutorial.rst  predicates.rst  python.rst  sat.rst  spec.rst
docs/en/: api_interfacing.rst  assumptions.rst  basic_steps.rst  blackbox.rst  changelog.rst  checkers.rst  command_line.rst  conf.py  efficient.rst  find_mus.rst  flattening.rst  fzn-grammar.mzn  fzn-spec.rst  fznjson.json  globalizer.rst  grammar.mzn  index.rst  installation.rst  installation_detailed.rst  installation_detailed_linux.rst  installation_detailed_wasm.rst  intro.rst  javascript.rst  json-stream.rst  jupyter.rst  minizinc_ide.rst  modelling.rst  modelling2.rst  mzn-analyse.rst  mzn_search.rst  optiontypes.rst  part_1_overview.rst  predicates.rst  (+13 more)
en/: Makefile  basic_steps.rst  checkers.rst  command_line.rst  command_line_basic_steps.rst  conf.py  cpprofiler.rst  datastructures.tex.in  efficient.rst  efficient.tex.in  find_mus.rst  flattening.rst  fzn-grammar.mzn  fzn-interfacing.rst  fzn-spec.rst  globalizer.rst  grammar.mzn  ide_basic_steps.rst  index.rst  installation.rst  installation_detailed.rst  installation_detailed_linux.rst  installation_detailed_wasm.rst  installation_detailed_windows.rst  intro.rst  intro.tex.in  jupyter.rst  keywords.tex.in  macros.tex  main.tex.in.in  minizinc_ide.rst  modelling.rst  modelling.tex.in  modelling2.rst  modelling2.tex.in  mymacros.tex  mystyle.xdy  mzn_search.rst  optiontypes.rst  optiontypes.tex.in  (+14 more)
es/: Leeme.txt  conf.py  efficient.rst  flattening.rst  fzn-interfacing.rst  grammar.mzn  ide_basic_steps.rst  index.rst  installation.rst  intro.rst  modelling.rst  modelling2.rst  mzn_search.rst  optiontypes.rst  output.mzn  part_1_introduction.rst  part_2_tutorial.rst  part_3_reference.rst  predicates.rst  sat.rst  spec.rst
lib/: .ast.cpp.swp  .parser.yxx.swp  MIPdomains.cpp  allocator.cpp  ast.cpp  astexception.cpp  astmap.cpp  aststring.cpp  astvec.cpp  blackbox.cpp  builtins.cpp  cdecode.c  cencode.c  chain_compressor.cpp  cli.cpp  codeprinter.cpp  context.cpp  copy.cpp  eval_par.cpp  exception.cpp  feature_extraction.cpp  file_utils.cpp  flatten.cpp  flattener.cpp  gc.cpp  htmlprinter.cpp  json_parser.cpp  lexer.lxx  lexer.yy.cpp  miniz.c  model.cpp  optimize.cpp  optimize_constraints.cpp  options.cpp  output.cpp  param_config.cpp  parser.cpp  parser.tab.cpp  parser.yxx  pathfileprinter.cpp  (+22 more)
minizinc/: config.hh  parser.tab.hh
mznlib/: all_different_int.mzn  bin_packing_load.mzn  count_eq.mzn  count_geq.mzn  count_gt.mzn  count_leq.mzn  count_lt.mzn  count_neq.mzn  cumulative.mzn  flatzinc.mzn  global_cardinality_closed.mzn  redefinitions.mzn  stdlib.mzn
passes/: compile_pass.cpp
tests/: .gitlab-ci-testing-pipeline.yml  README.md  addSolver2Examples.sh  conftest.py  pytest.ini  requirements.txt  run-all.sh  style.css  sudoku.mzn  sudoku_4_16x16.dzn
trunk/: Makefile  mzn2fzn.cpp
utils/: defblock.py  inlinesyntaxhighlight.py  minizinc_lexer.py  mznlexer.py  mznstyle.sty  sphinxtogithub.py
(+4190 files in other folders)
